--- a/public/css/search.css
+++ b/public/css/search.css
@@ -9,3 +9,43 @@
     cursor: pointer;
     margin-top: 20px;
 }
+
+.row{
+    float:left;
+    width:1024px;
+    font-weight:400
+}
+.col-title{
+    float:left;
+    width:200px;
+    font-weight:400;
+    border-top:1px solid black;
+    border-left:1px solid black;
+    border-bottom:1px solid black;
+
+}
+.col-title-right{
+    float:left;
+    width:200px;
+    font-weight:400;
+    border-top:1px solid black;
+    border-left:1px solid black;
+    border-bottom:1px solid black; 
+    border-right:1px solid black;   
+}
+.col{
+    float:left;
+    width:200px;
+    font-weight:400;
+    border-bottom:1px solid black;
+    border-left:1px solid black;
+
+}
+.col-right{
+    float:left;
+    width:200px;
+    font-weight:400;
+    border-bottom:1px solid black;
+    border-left:1px solid black;
+    border-right:1px solid black;
+}
