finish fixedCost yeah

--- a/public/css/fixedCost.css
+++ b/public/css/fixedCost.css
@@ -6,3 +6,9 @@
     color:black;
     font-weight: 300;
 }
+.format2{
+    float:left;
+    font-size:20px;
+    color:black;
+    font-weight: 300;
+}
