--- a/public/css/signIn.css
+++ b/public/css/signIn.css
@@ -18,3 +18,36 @@
     margin-top: 20px;
 }
 
+
+.dialog{
+    width:450px;
+    height:150px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    margin-left:-225px;
+    margin-top:-75px;
+    background: #6064ec;
+    border-radius: 5px;
+    display: none;
+
+}
+.dialogContent{
+    float:left;
+    width:450px;
+    height:100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 20px;
+}
+.dialogButton{
+    border-top:1px solid black;
+    float:left;
+    width:100px;
+    height:50px;
+    line-height: 50px;
+    text-align: center;
+    margin-left:175px;
+    background: #1ac71a;
+    border-radius: 3px;
+}
