--- a/public/css/resetPassword.css
+++ b/public/css/resetPassword.css
@@ -1,6 +1,6 @@
 .item{
     float:left;
-    margin-left:290px;
+    margin-left:250px;
     margin-top:45px;
     font-size:15px;
     color:gray;
@@ -18,4 +18,19 @@
     cursor: pointer;
     float: left;
     margin-top: 20px;
+}
+
+.input{
+    float:left;
+    font-size:15px;
+    color:gray;
+    font-weight: 450;
+}
+
+.text{
+    float:left;
+    width:250px;
+    font-size:18px;
+    color:gray;
+    font-weight: 500;
 }
