--- a/public/css/accountCreating.css
+++ b/public/css/accountCreating.css
@@ -14,7 +14,7 @@
 
 .item{
     float:left;
-    margin-left:290px;
+    margin-left:340px;
     margin-top:45px;
     font-size:15px;
     color:gray;
@@ -34,6 +34,7 @@
     display: none;
 
 }
+
 .dialogContent{
     float:left;
     width:450px;
@@ -42,6 +43,7 @@
     text-align: center;
     font-size: 20px;
 }
+
 .dialogButton{
     border-top:1px solid black;
     float:left;
@@ -52,4 +54,18 @@
     margin-left:175px;
     background: #1ac71a;
     border-radius: 3px;
+}
+
+.input{
+    float:left;
+    font-size:15px;
+    color:gray;
+    font-weight: 450;
+}
+.text{
+    float:left;
+    width:150px;
+    font-size:18px;
+    color:gray;
+    font-weight: 500;
 }
